WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
236498
[SOUP] Fix memory leak in WebKitDirectoryInputStream
https://bugs.webkit.org/show_bug.cgi?id=236498
Summary
[SOUP] Fix memory leak in WebKitDirectoryInputStream
Carlos Garcia Campos
Reported
2022-02-11 03:43:28 PST
.
Attachments
Patch
(1.47 KB, patch)
2022-02-11 03:44 PST
,
Carlos Garcia Campos
aperez
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2022-02-11 03:44:48 PST
Created
attachment 451670
[details]
Patch
Carlos Garcia Campos
Comment 2
2022-02-11 05:31:04 PST
Committed
r289619
(
247130@trunk
): <
https://commits.webkit.org/247130@trunk
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug