[SOUP] Fix memory leak in WebKitDirectoryInputStream https://bugs.webkit.org/show_bug.cgi?id=236498

Reviewed by Adrian Perez de Castro.

* NetworkProcess/soup/WebKitDirectoryInputStream.cpp:
(webkitDirectoryInputStreamRead): Use adoptGRef() for g_bytes_new_from_bytes().


Canonical link: https://commits.webkit.org/247130@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289619 268f45cc-cd09-0410-ab3c-d52691b4dbfc