Source/WebKit/NetworkProcess/soup/WebKitDirectoryInputStream.cpp
@@ -155,7 +155,7 @@ static gssize webkitDirectoryInputStreamRead(GInputStream* input, void* buffer, 
         if (bytesRead == bufferSize)
             stream->priv->buffer = nullptr;
         else
-            stream->priv->buffer = g_bytes_new_from_bytes(stream->priv->buffer.get(), bytesRead, bufferSize - bytesRead);
+            stream->priv->buffer = adoptGRef(g_bytes_new_from_bytes(stream->priv->buffer.get(), bytesRead, bufferSize - bytesRead));
         totalBytesRead += bytesRead;
     }
 
